Implement the charts for Alert rule analysis.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -346,11 +346,20 @@
     "txt-portDst": "Destination Port",
     "txt-lastPacket": "Last Packet",
     "txt-rule": "Rule",
+    "txt-ruleAnalysis": "Rule Analysis",
     "txt-attack": "Attack",
     "txt-ipBasicInfo": "IP Info",
     "txt-safetyScanInfo": "Safety Scan Info",
+    "txt-threatsContent": "Threats Content",
     "txt-severityType": "Type",
     "txt-severityDesc": "Description",
+    "txt-collectorType": "Collector",
+    "txt-threatsType": "Severity Type Name",
+    "txt-threatsCreateDttm": "Threats Create Time",
+    "txt-threatsUpdateDttm": "Threats Update Time",
+    "txt-networkBehavior": "惡意行為分布",
+    "txt-activeThreatsCount": "情資活躍次數分布",
+    "txt-internalNetworkDist": "情資內部活躍分布",
     "txt-queryMore": "Query",
     "txt-queryEvents": "View Details Infomation",
     "txt-searthVirustotal": "Search Virustotal",
