--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -346,11 +346,20 @@
     "txt-portDst": "目的Port",
     "txt-lastPacket": "結束封包",
     "txt-rule": "觸發規則",
+    "txt-ruleAnalysis": "觸發規則分析",
     "txt-attack": "攻擊行為",
     "txt-ipBasicInfo": "IP基本資訊",
     "txt-safetyScanInfo": "安全掃描資訊",
+    "txt-threatsContent": "情資內容",
     "txt-severityType": "代碼",
     "txt-severityDesc": "說明",
+    "txt-collectorType": "告警來源類型",
+    "txt-threatsType": "告警情資類型",
+    "txt-threatsCreateDttm": "情資建立時間",
+    "txt-threatsUpdateDttm": "情資更新時間",
+    "txt-networkBehavior": "惡意行為分布",
+    "txt-activeThreatsCount": "情資活躍次數分布",
+    "txt-internalNetworkDist": "情資內部活躍分布",
     "txt-queryMore": "查詢更多",
     "txt-queryEvents": "查看詳細資料",
     "txt-searthVirustotal": "查詢 Virustotal",
