Add bar chart / pie chart and data table for Alert rule dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -350,16 +350,19 @@
     "txt-attack": "Attack",
     "txt-ipBasicInfo": "IP Info",
     "txt-safetyScanInfo": "Safety Scan Info",
-    "txt-threatsContent": "Threats Content",
-    "txt-severityType": "Type",
+    "txt-threatsContent": "Threat Intelligence Info",
+    "txt-severityType": "Code",
     "txt-severityDesc": "Description",
     "txt-collectorType": "Collector",
-    "txt-threatsType": "Severity Type Name",
-    "txt-threatsCreateDttm": "Threats Create Time",
-    "txt-threatsUpdateDttm": "Threats Update Time",
-    "txt-networkBehavior": "惡意行為分布",
-    "txt-activeThreatsCount": "情資活躍次數分布",
-    "txt-internalNetworkDist": "情資內部活躍分布",
+    "txt-threatsType": "Severity Type",
+    "txt-threatsCreateDttm": "Create Time",
+    "txt-threatsUpdateDttm": "Update Time",
+    "txt-networkBehavior": "Malicious Behavior Analysis",
+    "txt-activeThreatsCount": "Threat intelligence distribution",
+    "txt-internalNetworkDist": "Threat intelligence distribution in Internal Subnets",
+    "txt-lastHourData": "Last Hour Data",
+    "txt-threatStat": "Threat Statistic",
+    "txt-eventStat": "Event Statistic",
     "txt-queryMore": "Query",
     "txt-queryEvents": "View Details Infomation",
     "txt-searthVirustotal": "Search Virustotal",
