--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -360,6 +360,9 @@
     "txt-networkBehavior": "惡意行為分布",
     "txt-activeThreatsCount": "情資活躍次數分布",
     "txt-internalNetworkDist": "情資內部活躍分布",
+    "txt-lastHourData": "最近一小時資料",
+    "txt-threatStat": "告警統計",
+    "txt-eventStat": "日誌統計",
     "txt-queryMore": "查詢更多",
     "txt-queryEvents": "查看詳細資料",
     "txt-searthVirustotal": "查詢 Virustotal",
