Finish the display for Threats charts in Alert dialog alert rule.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -361,6 +361,9 @@
     "txt-activeThreatsCount": "Threat intelligence distribution",
     "txt-internalNetworkDist": "Threat intelligence distribution in Internal Subnets",
     "txt-lastHourData": "Last Hour Data",
+    "txt-last10": "Recent 10",
+    "txt-last20": "Recent 20",
+    "txt-last50": "Recent 50",
     "txt-threatStat": "Threat Statistic",
     "txt-eventStat": "Event Statistic",
     "txt-queryMore": "Query",
