--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -361,6 +361,9 @@
     "txt-activeThreatsCount": "情資活躍次數分布",
     "txt-internalNetworkDist": "情資內部活躍分布",
     "txt-lastHourData": "最近一小時資料",
+    "txt-last10": "最近10次",
+    "txt-last20": "最近20次",
+    "txt-last50": "最近50次",
     "txt-threatStat": "告警統計",
     "txt-eventStat": "日誌統計",
     "txt-queryMore": "查詢更多",
