--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -368,6 +368,8 @@
     "txt-eventStat": "日誌統計",
     "txt-queryMore": "查詢更多",
     "txt-queryEvents": "查看詳細資料",
+    "txt-queryMoreEvents": "檢查其它告警紀錄",
+    "txt-queryMoreLogs": "檢查Logs紀錄",
     "txt-searthVirustotal": "查詢 Virustotal",
     "txt-downloadPCAP": "$t(txt-download)PCAP",
     "txt-downloadFile": "下載惡意程式",
