--- a/locales/en/accounts.json
+++ b/locales/en/accounts.json
@@ -67,6 +67,6 @@
   "pwd": "Password",
   "reenterPwd": "Retype password",
   "pwd-inconsistent":"First and second typing are different",
-  "pwd-samePass":"Please enter a new password",
+  "pwd-samePass":"New password and old password cannot be the same",
   "pwd-empty": "Password cannot be empty"
 }
