Fix floor map tree default selected issue. Fix Alert topology issue when navigate previous/next page.

--- a/locales/en/accounts.json
+++ b/locales/en/accounts.json
@@ -50,7 +50,7 @@
   "txt-ssl-connect": "SSL Connection",
   "txt-test-connect": "Connection Test",
   "txt-only-num-eng":"Composed by at least 4 digits and Eng alphabet",
-  "txt-email-invalid":"Invalid email address",
+  "txt-email-invalid":"Please enter a valid email address",
   "accountFields": {
     "account": "$t(l-account)",
     "name": "$t(l-name)",
