--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -138,6 +138,8 @@
   "txt-indicator": "Indicator",
   "txt-online": "Online",
   "txt-offline": "Offline",
+  "txt-alreadyOnline": "Online",
+  "txt-alreadyOffline": "Offline",
   "txt-unstable": "Unstable",
   "txt-unknown": "Unknown",
   "txt-severity": "Severity",
