Minor locale updates.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -138,8 +138,8 @@
   "txt-indicator": "Indicator",
   "txt-online": "Online",
   "txt-offline": "Offline",
-  "txt-alreadyOnline": "Online",
-  "txt-alreadyOffline": "Offline",
+  "txt-connected": "Connected",
+  "txt-disconnected": "Disconnected",
   "txt-unstable": "Unstable",
   "txt-unknown": "Unknown",
   "txt-severity": "Severity",
