--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -138,8 +138,8 @@
   "txt-indicator": "Indicator",
   "txt-online": "連線",
   "txt-offline": "離線",
-  "txt-alreadyOnline": "已連線",
-  "txt-alreadyOffline": "已離線",
+  "txt-connected": "已連線",
+  "txt-disconnected": "已離線",
   "txt-unstable": "不穩定",
   "txt-unknown": "未知",
   "txt-severity": "嚴重等級",
