--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -66,6 +66,8 @@
   "-5008": "系統服務預設埠號不允許使用",
   "-5009": "Log主機IP不存在",
 
+  "-6801": "PDF服務連線失敗",
+
   "-7000": "ES索引列表讀取失敗",
   "-7001": "開啟ES索引失敗",
   "-7002": "關閉ES索引失敗",
