--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -259,6 +259,7 @@
     "srcHostname": "Source Hostname"
   },
   "alertFields": {
+    "select": "",
     "_tableMenu_": "",
     "_eventDttm_": "Alert Datetime",
     "lastPacket": "Last Packet",
