--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -393,7 +393,8 @@
     "txt-alertThreatPrivateDest": "內部威脅目的IP",
     "txt-alertThreatCountryDest": "外部威脅目的國家",
     "txt-alertThreatPublicDest": "外部威脅目的IP",
-    "txt-alertNetTrapBlackList": "NetTrap黑名單查詢紀錄"
+    "txt-alertNetTrapBlackList": "NetTrap黑名單查詢紀錄",
+    "txt-alertTrackOverrideSuccess": "更新追蹤告警成功"
   },
 
   "events": {
