Update locale files for errors.json.

--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -7,55 +7,43 @@
   "file-too-large": "上傳檔案{{name}}過大，超過{{limit}}MB",
   "file-name-duplicate": "多個上傳檔案使用同樣名稱：{{name}}",
   "fill-required-fields": "Please fill out all the required fields",
+  "txt-param-null": "Parameter is NULL",
+  "txt-account-fail" : "Fail to get accounts from AD",
 
-  "-100":"Call web service fail{{message}}",
-  "-1":"System Error {{code}} {{message}}",
-  "-2": "Password incorrect",
-  "11101":"Right already exists",
-  "11101":"Right already exists",
-  "11102":"Right does not exist",
-  "11201":"Role already exists",
-  "11202":"Role already has this right",
-  "11203":"Role cannot have this right",
-  "11204":"Role does not exist",
-  "11205":"Role ID cannot be empty",
-  "11206":"Role does not have this right",
-  "12001":"Login session does not exist",
-  "12002":"Login session has expired",
-  "12003":"User has no right to access thie API",
-  "12101":"User does not exist",
-  "12102":"User alreay exists",
-  "12103":"User name cannot be empty",
-  "12105":"User expire time has exceeded",
-  "12106":"User is suspended",
-  "12107":"Username/Password is incorrect",
-  "12108":"User already has this right",
-  "12109":"User already has this role",
-  "12110":"Old password does not match",
-  "12111":"Password is empty",
-  "12112":"User does not have right to perform this action",
-  "12113":"User does not have this right",
-  "12114":"User does not have this role",
-  "12115":"User name cannot be empty",
-  "12116":"User password cannot be empty",
-  "12117":"User ID cannot be empty",
-  "13006":"Group already has existing memebers",
-  "13007":"Group does not have this right",
-  "13008":"Group does not have this role",
-  "13009":"Owner does not exist",
-  "22101":"Current username is incorrect",
+  "-1": "Http internal server error",
+  "-2": "Http parameter not found",
+  "-3": "Http not found",
+  "-4": "Http unknown",
 
-  "1001":"Access not allowed",
-  "1101":"請輸入欄位: {{field}}",
-  "-9001": "Owner ID is duplicated",
-
+  "-11": "Threat Intelligence Start DateTime (threatIntellStartDt) field is NULL or Empty!",
+  "-12": "ID (id) field is NULL or Empty!",
   "-13": "Please set the valid Agent end time",
+  "-14": "Threat Intelligence Update DateTime (threatIntellUpdDt) field is NULL or Empty!",
+
+  "-21": "Project ID (projectId) field is NULL or Empty!",
+  "-22": "Project ID (projectId) field is Duplicated!",
+
+  "-31": "IP and Port (ipPort) field is NULL or Empty!",
+  "-32": "IP and Port (ipPort) field is Duplicated!",
+  "-33": "Agent (ipPort) is not Reachable!",
+
+  "-100": "Call web service fail",
+
+  "-1000": "Function unexpected exception",
   "-1001": "Please fill out all the required fields",
-  "-1002": "User already exists.",
-  "-1004": "password must contain at least one lower-case alphabet/upper-case alphabet/digital/special character and have length more than 12.",
+  "-1002": "Function object not found",
+  "-1003": "Function syntax error",
+  "-1004": "Function not allowed",
   "-1005": "Password is expired",
-  "-1006": "Login fails exceed 5 times. The account has been locked, please contact administrator.",
+  "-1006": "Login fails exceed 5 times. The account has been locked, please contact administrator",
   "-1007": "Account service fails",
+  "-1008": "password must contain at least one lower-case alphabet/upper-case alphabet/digital/special character and have length more than 12",
+  "-1009": "Password incorrect",
+  "-1010": "Error login fail",
+
+  "-2001": "Unknown Target",
+  "-2002": "Expired",
+
   "-5000": "Format is incorrect",
   "-5001": "Port number is duplicated",
   "-5002": "IP is duplicated",
@@ -66,6 +54,8 @@
   "-5007": "Name already exist",
   "-5008": "Default port for system service is not allowed to use",
   "-5009": "Log Host IP does not exist",
+  "-5010": "SSH account is duplicated",
+  "-5011": "Invoke Restful API Fail",
 
   "-6801": "PDF service connect fail",
 
@@ -73,11 +63,67 @@
   "-7001": "Open ES index fail",
   "-7002": "Close ES index fail",
   "-7003": "Delete ES index fail",
+  "-7004": "ES index export fail",
+  "-7005": "ES index import fail",
   "-7006": "ES service is unavailable",
 
-  "txt-param-null": "Parameter is NULL",
-  "txt-account-fail" : "Fail to get accounts from AD",
+  "-9001": "Add Fail",
+  "-9002": "Update Fail",
+  "-9003": "Delete Fail",
+  "-9004": "Query Fail",
+  "-9005": "ID is Required",
+  "-9006": "Object is NULL",
+  "-9007": "Data Not Found",
+  "-9008": "File Save Fail",
+  "-9009": "File Delete Fail",
+  "-9010": "Child Area Exist",
+  "-9011": "Get Image Size Fail",
+  "-9012": "Remote Connect Fail",
+  "-9013": "Param is NULL",
+  "-9014": "String is too long",
+
+  "-9100": "Parse Json Fail",
+  "-9101": "Parse File Fail",
 
   "-10222": "Device ID is already exist",
-  "-10322": "Unit OID is already exist"
+  "-10322": "Unit OID is already exist",
+
+  "1001": "Access not allowed",
+  "1101": "please insert field: {{field}}",
+
+  "11101": "Right already exists",
+  "11102": "Right does not exist",
+  "11201": "Role already exists",
+  "11202": "Role already has this right",
+  "11203": "Role cannot have this right",
+  "11204": "Role does not exist",
+  "11205": "Role ID cannot be empty",
+  "11206": "Role does not have this right",
+
+  "12001": "Login session does not exist",
+  "12002": "Login session has expired",
+  "12003": "User has no right to access thie API",
+  "12101": "User does not exist",
+  "12102": "User alreay exists",
+  "12103": "User name cannot be empty",
+  "12105": "User expire time has exceeded",
+  "12106": "User is suspended",
+  "12107": "Username/Password is incorrect",
+  "12108": "User already has this right",
+  "12109": "User already has this role",
+  "12110": "Old password does not match",
+  "12111": "Password is empty",
+  "12112": "User does not have right to perform this action",
+  "12113": "User does not have this right",
+  "12114": "User does not have this role",
+  "12115": "User name cannot be empty",
+  "12116": "User password cannot be empty",
+  "12117": "User ID cannot be empty",
+
+  "13006": "Group already has existing memebers",
+  "13007": "Group does not have this right",
+  "13008": "Group does not have this role",
+  "13009": "Owner does not exist",
+
+  "22101": "Current username is incorrect"
 }
