--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -1,60 +1,49 @@
-{  
+{
   "missing": "此欄位為必填",
   "no-match": "請輸入正確格式：應為{{pattern}}",
   "not-int": "請輸入整數",
   "not-num": "請輸入數字",
   "out-of-bound": "請輸入正確範圍之數字{{min}}~{{max}}內",
-  "file-too-large":"上傳檔案{{name}}過大，超過{{limit}}MB",
-  "file-name-duplicate":"多個上傳檔案使用同樣名稱：{{name}}",
+  "file-too-large": "上傳檔案{{name}}過大，超過{{limit}}MB",
+  "file-name-duplicate": "多個上傳檔案使用同樣名稱：{{name}}",
   "fill-required-fields": "請輸入所有必填欄位",
+  "txt-param-null": "參數為空值",
+  "txt-account-fail": "無法由AD獲取帳號資訊",
 
-  "-100":"Call web service fail{{message}}",
-  "-1":"System Error {{code}} {{message}}",
-  "-2": "密碼錯誤",
-  "11101":"Right already exists",
-  "11102":"Right does not exist",
-  "11201":"Role already exists",
-  "11202":"Role already has this right",
-  "11203":"Role cannot have this right",
-  "11204":"Role does not exist",
-  "11205":"Role ID cannot be empty",
-  "11206":"Role does not have this right",
-  "12001":"Login session does not exist",
-  "12002":"Login session has expired",
-  "12003":"User has no right to access thie API",
-  "12101":"User does not exist",
-  "12102":"User alreay exists",
-  "12103":"User name cannot be empty",
-  "12105":"User expire time has exceeded",
-  "12106":"User is suspended",
-  "12107":"帳號/密碼有錯誤",
-  "12108":"User already has this right",
-  "12109":"User already has this role",
-  "12110":"Old password does not match",
-  "12111":"Password is empty",
-  "12112":"User does not have right to perform this action",
-  "12113":"User does not have this right",
-  "12114":"User does not have this role",
-  "12115":"User name cannot be empty",
-  "12116":"User password cannot be empty",
-  "12117":"User ID cannot be empty",
-  "13006":"Group already has existing memebers",
-  "13007":"Group does not have this right",
-  "13008":"Group does not have this role",
-  "13009":"Owner does not exist",
-  "22101":"舊密碼輸入錯誤",
+  "-1": "Http內部伺服器發生錯誤",
+  "-2": "Http參數為空值",
+  "-3": "Http找不到",
+  "-4": "Http未明",
 
-  "1001":"無權限存取",
-  "1101":"請輸入欄位: {{field}}",
-  "-9001": "所屬人員ID不得重複",
+  "-11": "Threat Intelligence Start DateTime (threatIntellStartDt) field is NULL or Empty!",
+  "-12": "ID (id) field is NULL or Empty!",
+  "-13": "Please set the valid Agent end time",
+  "-14": "Threat Intelligence Update DateTime (threatIntellUpdDt) field is NULL or Empty!",
 
-  "-13": "需設定有效結束時間",
+  "-21": "Project ID (projectId) field is NULL or Empty!",
+  "-22": "Project ID (projectId) field is Duplicated!",
+
+  "-31": "IP and Port (ipPort) field is NULL or Empty!",
+  "-32": "IP and Port (ipPort) field is Duplicated!",
+  "-33": "Agent (ipPort) is not Reachable!",
+
+  "-100": "呼叫網路服務失敗",
+
+  "-1000": "函式發生未預期錯誤",
   "-1001": "請輸入所有必填欄位",
-  "-1002": "帳號已存在",
-  "-1004": "密碼強度需符合長度至少12, 至少一個大寫英文字, 至少一個小寫英文字, 至少一個數字, 至少一個特殊字元, 不能與近五次密碼相同",
+  "-1002": "函式物件找不到",
+  "-1003": "函式語法錯誤",
+  "-1004": "函式不允許執行",
   "-1005": "密碼已到期",
   "-1006": "密碼錯誤超過5次，帳號已鎖定，請使用者聯絡系統管理員解鎖",
   "-1007": "帳號服務失敗",
+  "-1008": "密碼強度需符合長度至少12, 至少一個大寫英文字, 至少一個小寫英文字, 至少一個數字, 至少一個特殊字元, 不能與近五次密碼相同",
+  "-1009": "密碼錯誤",
+  "-1010": "登入錯誤",
+
+  "-2001": "目標未明",
+  "-2002": "已到期",
+
   "-5000": "格式錯誤",
   "-5001": "Port number不得重複",
   "-5002": "IP不得重複",
@@ -65,6 +54,8 @@
   "-5007": "名稱已重複",
   "-5008": "系統服務預設埠號不允許使用",
   "-5009": "Log主機IP不存在",
+  "-5010": "SSH帳號重複",
+  "-5011": "呼叫Restful API失敗",
 
   "-6801": "PDF服務連線失敗",
 
@@ -72,11 +63,67 @@
   "-7001": "開啟ES索引失敗",
   "-7002": "關閉ES索引失敗",
   "-7003": "刪除ES索引失敗",
+  "-7004": "匯出ES索引失敗",
+  "-7005": "匯入ES索引失敗",
   "-7006": "ES服務異常",
 
-  "txt-param-null": "參數為空",
-  "txt-account-fail": "無法由AD獲取帳號資訊",
+  "-9001": "新增失敗",
+  "-9002": "更新失敗",
+  "-9003": "刪除失敗",
+  "-9004": "查詢失敗",
+  "-9005": "ID為必要",
+  "-9006": "物件為NULL",
+  "-9007": "查無資料",
+  "-9008": "檔案儲存失敗",
+  "-9009": "檔案刪除失敗",
+  "-9010": "子空間已存在",
+  "-9011": "圖片大小讀取失敗",
+  "-9012": "遠距連線失敗",
+  "-9013": "參數為NULL",
+  "-9014": "字串過長",
+
+  "-9100": "解析Json失敗",
+  "-9101": "解析檔案失敗",
 
   "-10222": "設備代號已存在",
-  "-10322": "機關OID已存在"
+  "-10322": "機關OID已存在",
+
+  "1001": "無權限存取",
+  "1101": "請輸入欄位: {{field}}",
+
+  "11101": "權限已存在",
+  "11102": "權限不存在",
+  "11201": "角色已存在",
+  "11202": "角色已擁有此權限",
+  "11203": "角色不能擁有此權限",
+  "11204": "角色不存在",
+  "11205": "角色ID不得為空值",
+  "11206": "角色不擁有此權限",
+
+  "12001": "登入session不存在",
+  "12002": "登入session已過期",
+  "12003": "使用者無權限使用此API",
+  "12101": "使用者不存在",
+  "12102": "使用者已存在",
+  "12103": "帳號不得為空值",
+  "12105": "使用者已超過到期時間",
+  "12106": "使用者已被終止",
+  "12107": "帳號/密碼有錯誤",
+  "12108": "使用者已擁有此權限",
+  "12109": "使用者已擁有此角色",
+  "12110": "舊密碼不相符",
+  "12111": "密碼為空值",
+  "12112": "使用無權限執行此動作",
+  "12113": "使用無此權限",
+  "12114": "使用無此角色",
+  "12115": "帳號為空值",
+  "12116": "密碼不得為空值",
+  "12117": "帳號不得為空值",
+
+  "13006": "群組已擁有此成員",
+  "13007": "群組無此權限",
+  "13008": "群組無此角色",
+  "13009": "所屬人員不存在",
+
+  "22101": "舊密碼輸入錯誤"
 }
