Add SSH account option in Config Syslog config page. Revert back the Config User index page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -171,6 +171,7 @@
   "txt-desc": "Descending",
   "txt-description": "Description",
   "txt-reference": "Reference",
+  "txt-syslog": "Syslog",
   "txt-viewJSON": "$t(txt-view) JSON",
   "txt-exportCSV": "$t(txt-export) CSV",
   "txt-exportPDF": "$t(txt-export) PDF",
@@ -180,12 +181,12 @@
   "txt-checkRequiredFieldType": "Please check all the required fields and its format",
   "txt-threatsSrcCountryRank": "Source Country Alert Rank",
   "txt-checkDateFormat": "Please check date format",
-  "txt-layout-change": "Layout changed，whether to save ?",
+  "txt-layout-change": "Layout changed，whether to save?",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
   "txt-threats": "Threats",
-  "txt-syslog": "Syslog",
+  "txt-syslog-en": "Syslog",
   "txt-netflow": "Netflow",
   "txt-endpoint": "Endpoint",
   "txt-configuration": "Configuration",
