--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -171,6 +171,7 @@
   "txt-desc": "降序",
   "txt-description": "描述",
   "txt-reference": "參考",
+  "txt-syslog": "日誌串流",
   "txt-viewJSON": "$t(txt-view)JSON",
   "txt-exportCSV": "$t(txt-export)CSV",
   "txt-exportPDF": "$t(txt-export)PDF",
@@ -180,12 +181,12 @@
   "txt-checkRequiredFieldType": "請檢查格式及必填欄位",
   "txt-threatsSrcCountryRank": "威脅來源國家排名",
   "txt-checkDateFormat": "請確認日期格式",
-  "txt-layout-change": "版面布局已變更，是否儲存 ?",
+  "txt-layout-change": "版面布局已變更，是否儲存?",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
   "txt-threats": "Threats",
-  "txt-syslog": "Syslog",
+  "txt-syslog-en": "Syslog",
   "txt-netflow": "Netflow",
   "txt-endpoint": "Endpoint",
   "txt-configuration": "Configuration",
