--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -174,6 +174,7 @@
 		"txt-edgeDevice": "可收錄之Edge設備",
 		"txt-name": "設備名稱與型號",
 		"txt-id": "設備代號(Edge設備請勿隨意更改)",
+		"txt-id-limit": "設備代號",
 		"txt-company": "設備廠商",
 		"txt-exists": "設備代號已存在"
 	},
