Fix display of topology info in Alert Dialog. Minor other fix for v2.0 release.

--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -44,6 +44,7 @@
   "13008":"Group does not have this role",
   "13009":"Owner does not exist",
   "22101":"Current username is incorrect",
+  "22102":"Account ID is duplicated",
 
   "1001":"Access not allowed",
   "1101":"請輸入欄位: {{field}}",
