Remove HMD from Config Network Inventory page. Update locale files.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -182,6 +182,8 @@
   "txt-threatsSrcCountryRank": "威脅來源國家排名",
   "txt-checkDateFormat": "請確認日期格式",
   "txt-layout-change": "版面布局已變更，是否儲存?",
+  "txt-backToList": "$t(txt-back)$t(txt-listText)",
+  "txt-backToMap": "$t(txt-back)$t(txt-map)",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
@@ -556,44 +558,41 @@
     "txt-deletePattern": "$t(txt-delete)Pattern"
   },
 
-  "network-inventory": {
-    "txt-deviceList": "裝置列表",
-    "txt-deviceMap": "裝置地圖",
-    "txt-deviceLA": "裝置拓樸圖",
-    "txt-triggerAll": "全部檢測(HMD)",
-    "txt-addIP": "新增IP",
-    "txt-manuallyEnter": "單筆輸入",
-    "txt-batchUpload": "批次上傳",
-    "txt-batchUploadIp": "批次上傳IP",
-    "txt-uploadFailedIP": "IP格式有錯誤，請重新上傳",
-    "txt-uploadFailedMAC": "MAC格式有錯誤，請重新上傳",
-    "txt-uploadFailed": "以下資料上傳失敗，請再試一次",
+  "hmd-scan": {
     "txt-hmdSettings": "HMD設定",
     "txt-hmdDownload": "HMD$t(txt-download)",
-    "txt-autoSettings": "自動執行設定",
-    "txt-withHeader": "包含表頭",
-    "txt-selectIP": "請選擇IP欄位",
-    "txt-testQuery": "查詢測試",
+    "txt-triggerAll": "全部檢測(HMD)",
+    "txt-yaraRules": "Yara Rules",
     "txt-gcbVersion": "GCB版本",
-    "txt-backToList": "$t(txt-back)$t(txt-listText)",
-    "txt-backToMap": "$t(txt-back)$t(txt-map)",
+    "txt-eventsLogCount": "事件日誌數量",
+    "txt-taskFailure": "執行異常",
+    "txt-notSupport": "未支援",
+    "txt-passCount": "通過",
+    "txt-totalItem": "總項目",
     "txt-lastUpdate": "最近更新時間",
     "txt-createTime": "檢測時間",
     "txt-responseTime": "回應時間",
+    "txt-saveSettings": "儲存設定",
+    "txt-restoreDefault": "還原預設值",
+    "txt-refresh": "重新載入",
+    "txt-reCheck": "重新檢測",
+    "txt-reCompress": "重新壓縮",
+    "txt-downloadFile": "下載檔案",
+    "txt-compressFile": "壓縮檔案",
+    "txt-addToFilterList": "加入過濾名單",
     "txt-suspiciousFileCount": "可疑檔案數",
     "txt-suspiciousFileName": "可疑檔案名稱",
     "txt-suspiciousFilePath": "可疑檔案路徑",
-    "txt-eventsLogCount": "事件日誌數量",
     "txt-vulnerabilityInfo": "用戶端設備漏洞偵測",
     "txt-VulnerabilityCount": "用戶端漏洞設備數",
     "txt-learningInterval": "執行序執行學習時間(秒)",
     "txt-confirmWhiteList": "確定要加入白名單",
     "txt-addWhiteList": "加入白名單",
     "txt-addedWhiteList": "已加入白名單",
+    "txt-publishedDate": "發布日期",
+    "txt-lastModifiedDate": "上次修改日期",
     "txt-filePathList": "掃描路徑",
     "txt-modifiedFileCount": "異動檔案數",
-    "txt-taskFailure": "執行異常",
-    "txt-notSupport": "未支援",
     "txt-_MissingFile": "刪除檔案路徑",
     "txt-_ModifyFile": "修改檔案路徑",
     "txt-_NewCreateFile": "新增檔案路徑",
@@ -602,42 +601,9 @@
     "txt-processKeyword": "處理程序關鍵字掃描",
     "txt-scanProcess": "掃描Process",
     "txt-scanFilePath": "掃描檔案路徑",
-    "txt-saveSettings": "儲存設定",
-    "txt-restoreDefault": "還原預設值",
-    "txt-refresh": "重新載入",
-    "txt-reCheck": "重新檢測",
-    "txt-reCompress": "重新壓縮",
-    "txt-downloadFile": "下載檔案",
-    "txt-compressFile": "壓縮檔案",
-    "txt-yaraRules": "Yara Rules",
-    "txt-addToFilterList": "加入過濾名單",
-    "txt-passCount": "通過",
-    "txt-totalItem": "總項目",
-    "txt-total": "總上傳筆數",
-    "txt-success": "上傳成功筆數",
-    "txt-fail": "上傳失敗筆數",
     "txt-includePathEmpty": "偵測路徑為必填",
     "txt-irMsg": "IR資料已上傳至",
     "txt-itemSelection": "電腦採證",
-    "txt-duplicatedIP": "IP已存在，請重新輸入",
-    "txt-publishedDate": "發布日期",
-    "txt-lastModifiedDate": "上次修改日期",
-    "txt-editFloorMap": "$t(txt-edit)$t(txt-floorMap)",
-    "txt-viewDevice": "$t(txt-view)$t(alert.txt-ipBasicInfo)",
-    "txt-viewHMD": "$t(txt-view)$t(alert.txt-safetyScanInfo)",
-    "txt-deleteDevice": "$t(txt-delete)$t(txt-device)",
-    "txt-deleteDeviceMsg": "$t(txt-delete-msg)$t(txt-device)",
-    "auto-settings": {
-      "txt-ipRange": "IP Range",
-      "txt-AD": "AD",
-      "txt-LDAP": "LDAP",
-      "txt-username": "管理者名稱",
-      "txt-password": "管理者密碼",
-      "txt-netflow": "Netflow",
-      "txt-scanner": "Scanner",
-      "txt-connectionsFail": "連線失敗",
-      "txt-connectionsSuccess": "連線成功"
-    },
     "scan-list": {
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware",
@@ -690,6 +656,47 @@
       "_SerialNumber": "序列號",
       "_SubjectName": "簽署人"
     }
+  },
+
+  "auto-settings": {
+    "txt-ipRange": "IP Range",
+    "txt-AD": "AD",
+    "txt-LDAP": "LDAP",
+    "txt-username": "管理者名稱",
+    "txt-password": "管理者密碼",
+    "txt-netflow": "Netflow",
+    "txt-scanner": "Scanner",
+    "txt-connectionsFail": "連線失敗",
+    "txt-connectionsSuccess": "連線成功"
+  },
+
+  "network-inventory": {
+    "txt-hmdSettings": "HMD設定",
+    "txt-hmdDownload": "HMD$t(txt-download)",
+    "txt-triggerAll": "全部檢測(HMD)",
+    "txt-deviceList": "裝置列表",
+    "txt-deviceMap": "裝置地圖",
+    "txt-deviceLA": "裝置拓樸圖",
+    "txt-addIP": "新增IP",
+    "txt-manuallyEnter": "單筆輸入",
+    "txt-batchUpload": "批次上傳",
+    "txt-batchUploadIp": "批次上傳IP",
+    "txt-uploadFailedIP": "IP格式有錯誤，請重新上傳",
+    "txt-uploadFailedMAC": "MAC格式有錯誤，請重新上傳",
+    "txt-uploadFailed": "以下資料上傳失敗，請再試一次",
+    "txt-autoSettings": "自動執行設定",
+    "txt-withHeader": "包含表頭",
+    "txt-selectIP": "請選擇IP欄位",
+    "txt-testQuery": "查詢測試",
+    "txt-total": "總上傳筆數",
+    "txt-success": "上傳成功筆數",
+    "txt-fail": "上傳失敗筆數",
+    "txt-duplicatedIP": "IP已存在，請重新輸入",
+    "txt-editFloorMap": "$t(txt-edit)$t(txt-floorMap)",
+    "txt-viewDevice": "$t(txt-view)$t(alert.txt-ipBasicInfo)",
+    "txt-viewHMD": "$t(txt-view)$t(alert.txt-safetyScanInfo)",
+    "txt-deleteDevice": "$t(txt-delete)$t(txt-device)",
+    "txt-deleteDeviceMsg": "$t(txt-delete-msg)$t(txt-device)"
   },
 
   "network-topology": {
