--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -182,6 +182,8 @@
   "txt-threatsSrcCountryRank": "Source Country Alert Rank",
   "txt-checkDateFormat": "Please check date format",
   "txt-layout-change": "Layout changed，whether to save?",
+  "txt-backToList": "$t(txt-back) to $t(txt-listText)",
+  "txt-backToMap": "$t(txt-back) to $t(txt-map)",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
@@ -556,44 +558,41 @@
     "txt-deletePattern": "$t(txt-delete) Pattern"
   },
 
-  "network-inventory": {
-    "txt-deviceList": "Device List",
-    "txt-deviceMap": "Device Map",
-    "txt-deviceLA": "Network Topology",
-    "txt-triggerAll": "Trigger All (HMD)",
-    "txt-addIP": "Add IP",
-    "txt-manuallyEnter": "Manually Enter",
-    "txt-batchUpload": "Batch Upload",
-    "txt-batchUploadIp": "Batch Upload IP",
-    "txt-uploadFailedIP": "IP address is incorrect, please try upload again.",
-    "txt-uploadFailedMAC": "MAC format is incorrect, please try upload again.",
-    "txt-uploadFailed": "The following IP contains error, please try again.",
+  "hmd-scan": {
     "txt-hmdSettings": "HMD Settings",
     "txt-hmdDownload": "HMD $t(txt-download)",
-    "txt-autoSettings": "Auto Settings",
-    "txt-withHeader": "With Header",
-    "txt-selectIP": "Please select IP field",
-    "txt-testQuery": "Test Query",
+    "txt-triggerAll": "Trigger All (HMD)",
+    "txt-yaraRules": "Yara Rules",
     "txt-gcbVersion": "GCB Version",
-    "txt-backToList": "$t(txt-back) to $t(txt-listText)",
-    "txt-backToMap": "$t(txt-back) to $t(txt-map)",
+    "txt-eventsLogCount": "Events Log Count",
+    "txt-taskFailure": "Task Failure",
+    "txt-notSupport": "Not Support",
+    "txt-passCount": "Pass",
+    "txt-totalItem": "Total",
     "txt-lastUpdate": "Last Update",
     "txt-createTime": "Create Time",
     "txt-responseTime": "Response Time",
+    "txt-saveSettings": "Save",
+    "txt-restoreDefault": "Restore Default",
+    "txt-refresh": "Refresh",
+    "txt-reCheck": "Re-check",
+    "txt-reCompress": "Re-compress",
+    "txt-downloadFile": "Download File",
+    "txt-compressFile": "Compress File",
+    "txt-addToFilterList": "Add to filter list",
     "txt-suspiciousFileCount": "Suspicious File Count",
     "txt-suspiciousFileName": "Suspicious Filename",
     "txt-suspiciousFilePath": "Suspicious File Path",
-    "txt-eventsLogCount": "Events Log Count",
     "txt-vulnerabilityInfo": "Vulnerability Info",
     "txt-VulnerabilityCount": "Vulnerabilities",
     "txt-learningInterval": "Process Monitor Learning Interval (second)",
     "txt-confirmWhiteList": "Confirm to add to whitelist?",
     "txt-addWhiteList": "Add into Whitelist",
     "txt-addedWhiteList": "Added into Whitelist",
+    "txt-publishedDate": "Published Date",
+    "txt-lastModifiedDate": "Last Modified Date",
     "txt-filePathList": "File Path List",
     "txt-modifiedFileCount": "Modified files",
-    "txt-taskFailure": "Task Failure",
-    "txt-notSupport": "Not Support",
     "txt-_MissingFile": "Missing File Path",
     "txt-_ModifyFile": "Modify File Path",
     "txt-_NewCreateFile": "New Create File Path",
@@ -602,42 +601,9 @@
     "txt-processKeyword": "Process Keyword",
     "txt-scanProcess": "Scan Process",
     "txt-scanFilePath": "Scan File Path",
-    "txt-saveSettings": "Save",
-    "txt-restoreDefault": "Restore Default",
-    "txt-refresh": "Refresh",
-    "txt-reCheck": "Re-check",
-    "txt-reCompress": "Re-compress",
-    "txt-downloadFile": "Download File",
-    "txt-compressFile": "Compress File",
-    "txt-yaraRules": "Yara Rules",
-    "txt-addToFilterList": "Add to filter list",
-    "txt-passCount": "Pass",
-    "txt-totalItem": "Total",
-    "txt-total": "Total upload count",
-    "txt-success": "Total success count",
-    "txt-fail": "Total fail count",
     "txt-includePathEmpty": "Include Path is required",
     "txt-irMsg": "IR data has been uploaded to",
     "txt-itemSelection": "Select IR Set",
-    "txt-duplicatedIP": "IP already exists, please enter another IP",
-    "txt-publishedDate": "Published Date",
-    "txt-lastModifiedDate": "Last Modified Date",
-    "txt-editFloorMap": "$t(txt-edit) $t(txt-floorMap)",
-    "txt-viewDevice": "$t(txt-view) $t(alert.txt-ipBasicInfo)",
-    "txt-viewHMD": "$t(txt-view) $t(alert.txt-safetyScanInfo)",
-    "txt-deleteDevice": "$t(txt-delete) $t(txt-device)",
-    "txt-deleteDeviceMsg": "$t(txt-delete-msg) $t(txt-device)",
-    "auto-settings": {
-      "txt-ipRange": "IP Range",
-      "txt-AD": "AD",
-      "txt-LDAP": "LDAP",
-      "txt-username": "Admin Username",
-      "txt-password": "Admin Password",
-      "txt-netflow": "Netflow",
-      "txt-scanner": "Scanner",
-      "txt-connectionsFail": "Connections Fail",
-      "txt-connectionsSuccess": "Connections Success"
-    },
     "scan-list": {
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware",
@@ -690,6 +656,44 @@
       "_SerialNumber": "Serial Number",
       "_SubjectName": "Subject Name"
     }
+  },
+
+  "auto-settings": {
+    "txt-ipRange": "IP Range",
+    "txt-AD": "AD",
+    "txt-LDAP": "LDAP",
+    "txt-username": "Admin Username",
+    "txt-password": "Admin Password",
+    "txt-netflow": "Netflow",
+    "txt-scanner": "Scanner",
+    "txt-connectionsFail": "Connections Fail",
+    "txt-connectionsSuccess": "Connections Success"
+  },
+
+  "network-inventory": {
+    "txt-deviceList": "Device List",
+    "txt-deviceMap": "Device Map",
+    "txt-deviceLA": "Network Topology",
+    "txt-addIP": "Add IP",
+    "txt-manuallyEnter": "Manually Enter",
+    "txt-batchUpload": "Batch Upload",
+    "txt-batchUploadIp": "Batch Upload IP",
+    "txt-uploadFailedIP": "IP address is incorrect, please try upload again.",
+    "txt-uploadFailedMAC": "MAC format is incorrect, please try upload again.",
+    "txt-uploadFailed": "The following IP contains error, please try again.",
+    "txt-autoSettings": "Auto Settings",
+    "txt-withHeader": "With Header",
+    "txt-selectIP": "Please select IP field",
+    "txt-testQuery": "Test Query",
+    "txt-total": "Total upload count",
+    "txt-success": "Total success count",
+    "txt-fail": "Total fail count",
+    "txt-duplicatedIP": "IP already exists, please enter another IP",
+    "txt-editFloorMap": "$t(txt-edit) $t(txt-floorMap)",
+    "txt-viewDevice": "$t(txt-view) $t(alert.txt-ipBasicInfo)",
+    "txt-viewHMD": "$t(txt-view) $t(alert.txt-safetyScanInfo)",
+    "txt-deleteDevice": "$t(txt-delete) $t(txt-device)",
+    "txt-deleteDeviceMsg": "$t(txt-delete-msg) $t(txt-device)"
   },
 
   "network-topology": {
