Update logic for Config Syslog config page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -875,9 +875,8 @@
     "txt-hostIP": "Host IP",
     "txt-getLatest": "Get Latest Input Text",
     "txt-customFieldName": "Custom Field Name",
-    "txt-addSyslog": "Add Syslog",
+    "txt-lastStatusUpdate": "Last status update",
     "txt-editSyslog": "Edit Syslog",
-    "txt-deleteSyslog": "Delete Syslog",
     "txt-eventDist": " Event Distribution",
     "txt-viewEvents": "View Events",
     "txt-overallDist": "Overall Distribution",
