Add the 'Download Logs' and 'Compress Logs' button in HMD settings dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -579,6 +579,9 @@
     "txt-reCompress": "Re-compress",
     "txt-downloadFile": "Download File",
     "txt-compressFile": "Compress File",
+    "txt-downloadLogs": "Download Logs",
+    "txt-compressLogs": "Compress Logs",
+    "txt-recompressLogs": "Recompress Logs",
     "txt-addToFilterList": "Add to filter list",
     "txt-suspiciousFileCount": "Suspicious File Count",
     "txt-suspiciousFileName": "Suspicious Filename",
