--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -579,6 +579,9 @@
     "txt-reCompress": "重新壓縮",
     "txt-downloadFile": "下載檔案",
     "txt-compressFile": "壓縮檔案",
+    "txt-downloadLogs": "下載Logs",
+    "txt-compress-logs": "壓縮Logs",
+    "txt-recompress-logs": "重新壓縮Logs",
     "txt-addToFilterList": "加入過濾名單",
     "txt-suspiciousFileCount": "可疑檔案數",
     "txt-suspiciousFileName": "可疑檔案名稱",
