--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -320,6 +320,8 @@
   "host": {
     "txt-hostList": "Host List",
     "txt-deviceMap": "Device Map",
+    "txt-safetyScan": "Safety Scan",
+    "txt-safetyScanType": "Safety Scan Type",
     "txt-hostInfo": "Host Info",
     "txt-viewInfo": "View Info",
     "txt-hostList2": "Host",
