--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -320,6 +320,8 @@
   "host": {
     "txt-hostList": "主機列表",
     "txt-deviceMap": "裝置地圖",
+    "txt-safetyScan": "安全掃描",
+    "txt-safetyScanType": "安全掃描類型",
     "txt-hostInfo": "主機資訊",
     "txt-viewInfo": "查看內容",
     "txt-hostList2": "主機清單",
