--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -6,6 +6,8 @@
 
   "txt-on": "On",
   "txt-off": "Off",
+  "txt-true": "True",
+  "txt-false": "False",  
   "txt-switch": "Switch",
   "txt-ok": "OK",
   "txt-time": "Time",
@@ -332,7 +334,17 @@
     "txt-isOldVersion": "Not Upgraded",
     "txt-isOwnerNull": "No Owner",
     "txt-isAreaNull": "No Area",
-    "txt-isSeatNull": "No Seat"
+    "txt-isSeatNull": "No Seat",
+    "txt-peFile": "PE File",
+    "txt-peFileExtension": "PE File Extension",
+    "txt-malwareInfo": "Malware Information",
+    "txt-hashMD5": "Hash Value (MD5)",
+    "txt-fileSize": "File Size",
+    "txt-isPEfile": "Is PE?",
+    "txt-isPEextension": "Is PE Extension?",
+    "txt-isSignature": "Is valid signature?",
+    "txt-basicInfo": "Basic Info",
+    "txt-availableHost": "Host"
   },
 
   "alert": {
